# esp32-websocket

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
.config/: config.h.in  passwords.cmake
dart/: pubspec.yaml
src/: config.h  main.cpp  ota.cpp  ota.h  stdafx.cpp  stdafx.h
src/socket/: SocketHandler.cpp  SocketHandler.h
tests/: CMakeLists.txt
tests/basic_tests/: ws_basic.cpp
